--- a/src/features/login/login-client.module.css
+++ b/src/features/login/login-client.module.css
@@ -20,6 +20,11 @@
   justify-content: center;
 }
 
+.formContainer > form {
+  width: 100%;
+  max-width: 16rem;
+}
+
 .heading {
   margin: 0.75rem 0 1.25rem;
   padding: 0.5rem 0;
